change styling to related products

--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -1,6 +1,7 @@
 .related-products-component {
 
   padding-bottom: 75px;
+  padding-top: 30px;
 
   &__card {
     background-color: $color__secondary-gray6;
