add links to related products

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
@@ -12,15 +12,17 @@
     <div data-sly-list="${data}" class="carousel-component-slide carousel-inner hidden-xs" role="listbox">
         <div class="item ${itemList.index == 0 ? 'active' : ''} hidden-xs">
             <div class="row" data-sly-list="${item.cards}">
-                <div class="col-sm-3">
-                    <div class="col-xs-12 related-products-component__card">
-                        <img class="carousel-component-slide__image" src="${item.image}" alt="${item.alt}">
+                <a href="${item.link}" role="link">
+                    <div class="col-sm-3">
+                        <div class="col-xs-12 related-products-component__card">
+                            <img class="carousel-component-slide__image" src="${item.image}" alt="${item.alt}">
+                        </div>
+                        <div class="col-xs-12">
+                            <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
+                            <p class="b-h4-link">${item.text}</p>
+                        </div>
                     </div>
-                    <div class="col-xs-12">
-                        <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
-                        <p class="b-h4-link">${item.text}</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
@@ -54,13 +56,15 @@
     <div data-sly-list.data="${data}" class="carousel-component-slide carousel-inner visible-xs" role="listbox">
         <sly  data-sly-list.card="${data.cards}">
             <div class="item ${cardList.index == 0 ? 'active' : ''}">
-                <div class="col-xs-12 related-products-component__card">
-                    <img class="carousel-component-slide__image" src="${card.image}" alt="${card.alt}">
-                </div>
-                <div class="col-xs-12">
-                    <p class="b-eyebrow-small related-products-component__title">${card.title}</p>
-                    <p class="b-h4-link">${card.text}</p>
-                </div>
+                <a href="${card.link}" role="link">
+                    <div class="col-xs-12 related-products-component__card">
+                        <img class="carousel-component-slide__image" src="${card.image}" alt="${card.alt}">
+                    </div>
+                    <div class="col-xs-12">
+                        <p class="b-eyebrow-small related-products-component__title">${card.title}</p>
+                        <p class="b-h4-link">${card.text}</p>
+                    </div>
+                </a>
             </div>
         </sly>
     </div>
