--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
@@ -18,6 +18,10 @@
 
 .results-list { padding-bottom: 45px; }
 
+.results-list__disclaimer { border-top: 3px solid #EEF0F2; padding: 20px 0; }
+
+.results-list__actions { margin-top: 40px; }
+
 @media screen and (min-width: 992px) { .results-list { padding-bottom: 90px; } }
 
 .results-list-module { display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 30px; }
