--- a/eaton.frontend/src/components/product-grid-sku/css/_product-card-sku.scss
+++ b/eaton.frontend/src/components/product-grid-sku/css/_product-card-sku.scss
@@ -109,9 +109,12 @@
       display: flex;
       padding: 12px $grid-container-padding-mobile;
 
-      .link-label {
-        flex: 1;
+      &:hover {
+        color: $color__primary-blue;
+        text-decoration: none;
       }
+
+      .link-label { flex: 1; }
     }
 
 
