[M60] Add Utility class for Inline Lists. Update Search Results Product item

--- a/eaton.frontend/src/global/css/utils/_utils.scss
+++ b/eaton.frontend/src/global/css/utils/_utils.scss
@@ -27,6 +27,14 @@
   @include clearfix();
 }
 
+.u-list-inline {
+  align-items: center;
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 
 // Text Utils
 //--------------
