--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
@@ -32,6 +32,14 @@
 
 .results-list-module__secondary-links { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
+.results-list-module__name { margin-bottom: 5px; }
+
+.results-list-module__description, .results-list-module__url, .results-list-module__link-list { margin-bottom: 12px; }
+
+.results-list-module__link-item { border-right: 1px solid #CCD2D7; margin-right: 16px; padding-right: 16px; }
+
+.results-list-module__link-item:last-child { border-right: 0; margin-right: 0; padding-right: 0; }
+
 @media screen and (max-width: 991px) { .results-list-module--type-family, .results-list-module--type-sku { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; }
   .results-list-module__image-wrapper { margin-bottom: 20px; }
   .results-list-module__image { min-width: 300px; max-height: 200px; } }
