--- a/eaton.frontend/src/components/search-results/css/views/_view-simple.scss
+++ b/eaton.frontend/src/components/search-results/css/views/_view-simple.scss
@@ -140,6 +140,29 @@
     display: flex;
   }
 
+  &__name {
+    margin-bottom: 5px; // Visually 20px Top Margin. Smaller margin value due to font Line-height
+  }
+
+  &__description,
+  &__url,
+  &__link-list {
+    margin-bottom: 12px; // Visually 20px Top Margin. Smaller margin value due to font Line-height
+  }
+
+  &__link-item {
+    border-right: 1px solid $color__secondary-gray4;
+    margin-right: 16px;
+    padding-right: 16px;
+
+    // Remove Line / Reset Margins for last link in the list
+    &:last-child {
+      border-right: 0;
+      margin-right: 0;
+      padding-right: 0;
+    }
+  }
+
 
 
 
