--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -184,6 +184,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .u-clearfix::after { clear: both; }
 
+.u-list-inline { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; list-style-type: none; margin: 0; padding: 0; }
+
 .u-text-center { text-align: center; }
 
 .u-text-left { text-align: left; }
