--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -16,7 +16,7 @@
   // ----------------------------
   @include media-mobile-and-tablet {
     position: fixed;
-    top: 60px;
+    top: 56px;
     bottom: 0;
     width: 100%;
     left: 0;
@@ -48,12 +48,20 @@
       min-height: 600px;
 
       a {
-        display: block;
+        display: flex;
+        align-items: center;
         padding: $spacing__sm 0;
         color: $color__white;
         cursor: pointer;
-        border-bottom: 1px solid $color__secondary-gray5;
+        border-bottom: 1px solid rgba(238, 240, 242, 0.5);
         font-size: 20px;
+        position: relative;
+
+        span { flex: 1; }
+        .icon {
+          display: flex;
+          font-size: 0.75em;
+        }
 
         &:first-child { margin-top: 0; }
         &:last-child { border-bottom: 0; }
@@ -103,6 +111,10 @@
         align-items: center;
         font-size: 20px; //1.25em;
         position: relative;
+
+        .icon {
+          display: none;
+        }
 
         &.active::after {
           content: '';
