--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -1,5 +1,7 @@
 .header-utility-nav { background: #005EB8; padding: 10px 0; font-size: 14px; }
 
+.header-utility-nav__row { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
 .header-utility-nav__country { text-transform: uppercase; font-weight: bold; margin-right: 5px; font-family: Arial, sans-serif; }
 
 .header-utility-nav__sign-in { text-align: right; }
@@ -10,8 +12,16 @@
 
 .header-utility-nav .open-country-selector, .header-utility-nav .open-sign-in { color: #FFF; text-decoration: none; }
 
-@media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 5; width: 100%; right: 0; opacity: 0; visibility: hidden; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; }
+@media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 5; width: 100%; right: 0; opacity: 0; visibility: hidden; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; padding: 0; }
+  .header-utility-nav .container { padding: 0; }
+  .header-utility-nav__row { -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+  .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -ms-flex-preferred-size: 75%; flex-basis: 75%; background: #333F48; }
+  .header-utility-nav__sign-in { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; text-align: center; }
+  .header-utility-nav__signin { display: none; }
   .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
+
+@media screen and (min-width: 992px) { .header-utility-nav__row { padding: 0 15px; }
+  .header-utility-nav__toggle-selector { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
 
 .header-primary-nav { background: #FFF; border-bottom: 4px solid #EEF0F2; -webkit-transition: height 0.3s ease-in-out; transition: height 0.3s ease-in-out; }
 
