--- a/eaton.frontend/src/components/list/css/views/_view-links.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-links.scss
@@ -34,12 +34,14 @@
   @include media-mobile-and-tablet {
     flex-direction: column;
 
-    &__col {
-      margin-bottom: ($spacing__sm);
+    &__link {
+      display: flex;
+      padding: 20px 0;
+      border-bottom: 1px solid rgba(238, 240, 242, 0.3);
+    }
 
-      &:last-child {
-        margin-bottom: 0;
-      }
+    &__text {
+      flex: 1;
     }
   }
 
