--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -79,8 +79,8 @@
 .dark-theme .eaton-list-links__link { color: #FFF; }
 
 @media screen and (max-width: 991px) { .eaton-list-links { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
-  .eaton-list-links__col { margin-bottom: 30px; }
-  .eaton-list-links__col:last-child { margin-bottom: 0; } }
+  .eaton-list-links__link { display: -webkit-box; display: -ms-flexbox; display: flex; padding: 20px 0; border-bottom: 1px solid rgba(238, 240, 242, 0.3); }
+  .eaton-list-links__text { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
 
 @media screen and (min-width: 992px) { .eaton-list-links { -ms-flex-wrap: nowrap; flex-wrap: nowrap; }
   .eaton-list-links__col { width: 100%; margin: 0 15px; }
