--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -59,10 +59,12 @@
       flex-direction: column;
 
       .mega-menu__col {
-        margin-bottom: $spacing__sm;
+        display: none;
 
-        &:last-child {
-          margin-bottom: 0;
+        // Only display level-2 links in mobile
+        &.mega-menu__col--flex {
+          display: block;
+          margin-bottom: $spacing__sm;
         }
       }
     }
