--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
@@ -34,6 +34,8 @@
 
 .results-list-module__name { margin-bottom: 5px; }
 
+.results-list-module__name .icon { margin-left: 10px; }
+
 .results-list-module__description, .results-list-module__url, .results-list-module__link-list { margin-bottom: 12px; }
 
 .results-list-module__link-item { border-right: 1px solid #CCD2D7; margin-right: 16px; padding-right: 16px; }
@@ -44,7 +46,7 @@
   .results-list-module__image-wrapper { margin-bottom: 20px; }
   .results-list-module__image { min-width: 300px; max-height: 200px; } }
 
-@media screen and (min-width: 992px) { .results-list-module { margin-bottom: 60px; }
+@media screen and (min-width: 992px) { .results-list-module { margin-bottom: 40px; }
   .results-list-module__image-wrapper { -ms-flex-preferred-size: 140px; flex-basis: 140px; margin-right: 30px; padding-top: 8px; }
   .results-list-module__image { max-width: 140px; }
   .results-list-module__icon-wrapper { -ms-flex-preferred-size: 48px; flex-basis: 48px; margin-right: 30px; padding-top: 8px; }
