--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-2column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-2column.html
@@ -1,4 +1,7 @@
-<sly data-sly-use.data="../data/view-2column-data.js">
+<sly data-sly-use.data="${'../data/view-2column-data.js' @testdata=properties.testdata}">
+	<sly data-sly-test="${properties.testdata == 'content'}">
+		<div class="container">
+	</sly>
 	<div class="eaton-linklist-2column">
 		<div class="row" data-sly-list.link=${data.links}>
 			<div class="col-xs-12 col-md-6 eaton-linklist-2column__link">
@@ -6,4 +9,7 @@
 			</div>
 		</div>
 	</div>
+	<sly data-sly-test="${properties.testdata == 'content'}">
+		</div>
+	</sly>
 </sly>
