--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
@@ -20,7 +20,8 @@
                 class="search-results-simple__active-filters">
                 <a class="search-results-simple__filter-link"
                   href="${ filter.url }"
-                  aria-label="${ 'Remove filter {0}' @ i18n, format=[ filter.text ] }">
+                  aria-label="${ 'Remove filter {0}' @ i18n, format=[ filter.text ] }"
+                >
                   <i class="icon icon-close" aria-hidden="true"></i>
                   <span class="search-results-simple__filter-label">${ filter.text }</span>
                 </a>
