--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--resource.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--resource.html
@@ -9,7 +9,7 @@
       <a href="${ data.contentItem.link.url @ context='uri' }"
         target="${ data.contentItem.link.target }"
         class="results-list-module__url-link"
-        aria-label="${ 'Download {0}' @ format=[ data.contentItem.documentName ] }"
+        aria-label="${ 'Download' @i18n } ${ data.contentItem.documentName }"
       >
         <i class="icon icon-download" aria-hidden="true"></i>
         <span class="sr-only">${ data.contentItem.link.text }</span>
@@ -32,6 +32,7 @@
         <a data-sly-attribute.href="${ data.contentItem.link.url @ context='uri' }"
           target="${ data.contentItem.link.target }"
           class="results-list-module__link"
+          aria-label="${ 'Download' @i18n } ${ data.contentItem.documentName }"
         >${ data.contentItem.link.text }</a>
       </div>
 
