--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -71,6 +71,7 @@
       height: 100%;
       visibility: visible;
       overflow: auto;
+      opacity: 1;
     }
 
     .header-primary-nav__toggle-mobile-menu {
@@ -99,6 +100,7 @@
       .mega-menu {
         visibility: visible;
         transform: translate(0);
+        opacity: 1;
       }
     }
   }
