--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -25,8 +25,9 @@
     overflow: hidden;
     background: $color__primary-gray2;
     color: $color__white;
-    transition: all 0.7s ease-in-out;
+    transition: height 0.7s ease-in-out, left 0.7s ease-in-out;
     margin-bottom: 80px;
+    opacity: 0;
 
     &__headline {
       display: block;
